<resources>
    <string name="app_name">Bingo</string>
    <string name="o">O</string>
    <string name="g">G</string>
    <string name="n">N</string>
    <string name="i">I</string>
    <string name="b">B</string>
    <string name="join">Join</string>
    <string name="host_ip_address">Host IP Address</string>
    <string name="leave">Leave</string>
    <string name="processing_request">Processing request…</string>
    <string name="player_name">Player Name</string>
    <string name="no">No</string>
    <string name="bingo_splash_image">Bingo splash image</string>
    <string name="internet_unavailable">Internet Unavailable</string>
    <string name="starting">Starting…</string>
    <string name="server_unreachable">Server Unreachable</string>

    <string-array name="timeLimitOptions">
        <item>3 sec</item>
        <item>10 sec</item>
        <item>1 min</item>
    </string-array>

    <string-array name="colorsName">
        <item>Ravaging Red</item>
        <item>Gorgeous Green</item>
        <item>Blazing Blue</item>
        <item>Obnoxious Orange</item>
        <item>Vibrant Violet</item>
        <item>Yakkaty Yellow</item>
        <item>Benzoic Black</item>
        <item>Deep Blue</item>
    </string-array>

    <string-array name="colorsHex">
        <item>#CC0000</item>
        <item>#99CC00</item>
        <item>#00DDFF</item>
        <item>#FF8800</item>
        <item>#FF00FF</item>
        <item>#8692E1</item>
        <item>#111111</item>
        <item>#0077FF</item>
    </string-array>

    <string-array name="colorsRim">
        <item>#CC0000</item>
        <item>#669900</item>
        <item>#0099CC</item>
        <item>#FF6600</item>
        <item>#AA66CC</item>
        <item>#8692FF</item>
        <item>#000000</item>
        <item>#0033FF</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tts_preference_key">Speech to Text</string>
    <string name="talk_to_speak_button">Talk to Speak Button</string>

    <string name="refresh_description">Refresh rooms list</string>
    <string name="slash"> / </string>
    <string name="no_rooms_found">No rooms found</string>
    <string name="host">host</string>
    <string name="room_name">Room Name</string>
    <string name="splash_app_name">BiNGO</string>
    <string name="bingo_app_name_transition">bingo_name_transition</string>
    <string name="quit">Quit</string>
    <string name="room_name_transition">room_name_transition</string>
    <string name="room_image">Room image</string>
    <string name="sound_preference_key">sound key</string>
    <string name="tutorial_preference_key">tutorial key</string>
    <string name="number_of_players">Number of Players</string>
    <string name="help">Help</string>
    <string name="help_content">Objective:-\nComplete 5 straight lines. A line can either be any row, column or diagonal.</string>
    <string name="time_limit_per_turn">Time limit per Turn</string>
    <string name="stopwatch_image">Stopwatch Image</string>
    <string name="password_optional">Password (Optional)</string>
    <string name="lock_symbol">Lock Symbol</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="type_you_message_here">Type you message here</string>
    <string name="chat_button">Chat button</string>
    <string name="start_new_conversation">Start new conversation…</string>
    <string name="hide_chat_button">Hide chat button</string>
    <string name="color_item">Color item</string>
    <string name="color_selected_tick">Color selected tick</string>

</resources>
