<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/sound_preference_key"
        android:summary="Celebration and number click sounds."
        android:title="Sound and Music"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/tutorial_preference_key"
        android:summary="Start an interactive tutorial when app launches"
        android:title="Tutorial"
        app:iconSpaceReserved="false" />
    r
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/tts_preference_key"
        android:summary="Read out numbers instead of tapping on them."
        android:title="Speech to Text"
        app:iconSpaceReserved="false" />

</PreferenceScreen>