<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rooms_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="24dp"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/refreshRooms_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/refresh_description"
        android:src="@drawable/refresh_icon2" />

    <TextView
        android:id="@+id/noRoomsFound_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_rooms_found"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/host_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/host" />

</FrameLayout>