<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <com.hmproductions.bingo.views.BaselineGridTextView
        android:id="@+id/toolbarName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centering_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/default_bingo_font"
        android:text="@string/splash_app_name"
        android:textColor="?colorPrimary"
        android:textSize="54sp"
        android:textStyle="bold"
        android:transitionName="@string/bingo_app_name_transition" />

    <View
        android:id="@+id/centering_view"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/loading_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centering_view"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/default_bingo_font"
        android:gravity="center"
        android:text="@string/starting"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp" />

</RelativeLayout>