<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="6dp">

    <GridView
        android:id="@+id/game_gridView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="-100dp"
        android:gravity="center"
        android:numColumns="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonPanel"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/B_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/b"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/I_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/i"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/N_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/n"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/G_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/g"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/O_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/o"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/resetButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/reset"
            android:textSize="20sp" />

        <Button
            android:id="@+id/undoButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/undo"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
